Compiled an updated standalone HTML file.

--- a/bip39-standalone.html
+++ b/bip39-standalone.html
@@ -74872,7 +74872,7 @@ window.Entropy = new (function() {
         var errorText = findPhraseErrors(phrase);
         if (errorText) {
             showValidationError(errorText);
-            return;
+            //return;
         }
         // Calculate and display
         var passphrase = DOM.passphrase.val();
